Can create/edit circles

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -1,3 +1,11 @@
 {
-  "Storylab": "Erzählkreis"
+  "Storylab": "Erzählkreis",
+  "Home": "Start",
+  "Circles": "Erzählkreise",
+  "New Circle": "Neuer Erzählkreis",
+  "No Circles": "Keine Erzählkreise",
+  "Authors": "Autoren",
+  "Stories": "Geschichten",
+  "Scenes": "Szenen",
+  "Passages": "Passagen"
 }
