--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -1,11 +1,23 @@
 {
-  "Storylab": "Erzählkreis",
-  "Home": "Start",
-  "Circles": "Erzählkreise",
-  "New Circle": "Neuer Erzählkreis",
-  "No Circles": "Keine Erzählkreise",
+  "Account": "Konto",
   "Authors": "Autoren",
-  "Stories": "Geschichten",
+  "Changes to Circle saved": "Änderungen am Erzählkreis gespeichert",
+  "Circle": "Erzählkreis",
+  "Circles": "Erzählkreise",
+  "Edit": "Bearbeiten",
+  "Edit Circle": "Erzählkreis bearbeiten",
+  "Home": "Start",
+  "Log out": "Abmelden",
+  "New Author": "Neuer Autor",
+  "New Circle": "Neuer Erzählkreis",
+  "New Passage": "Neue Passage",
+  "New Scene": "Neue Szene",
+  "New Story": "Neue Geschichte",
+  "No Circles": "Keine Erzählkreise",
+  "Passages": "Passagen",
+  "Save": "Speichern",
   "Scenes": "Szenen",
-  "Passages": "Passagen"
+  "Settings": "Einstellungen",
+  "Stories": "Geschichten",
+  "Storylab": "Erzählkreis"
 }
