Scoped access control

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -8,8 +8,12 @@
   "Edit": "Bearbeiten",
   "Edit Circle": "Erzählkreis bearbeiten",
   "Edit Story": "Geschichte bearbeiten",
+  "E-Mail Address": "E-Mail-Adresse",
+  "Here you can create such an account.": "Hier kannst du dir ein solches Konto anlegen.",
   "Home": "Start",
+  ":app is private by default.": "Inhalte auf :app sind grundsätzlich nicht öffentlich.",
   "Log out": "Abmelden",
+  "Name": "Name",
   "New Author": "Neuer Autor",
   "New Circle": "Neuer Erzählkreis",
   "New Passage": "Neue Passage",
@@ -17,12 +21,17 @@
   "New Story": "Neue Geschichte",
   "No Circles": "Keine Erzählkreise",
   "Passages": "Passagen",
+  "Please fill in all the fields.": "Bitte fülle alle Felder aus.",
   "Public": "Öffentlich",
+  "Register": "Konto anlegen",
+  "Register with :app": "Registriere dich bei :app",
+  "There are no obligations or hidden costs.": "Es gibt keine Verpflichtungen oder versteckte Kosten.",
   "Save": "Speichern",
   "Scenes": "Szenen",
   "Settings": "Einstellungen",
   "Stories": "Geschichten",
   "Storylab": "Erzählkreis",
   "Summary": "Zusammenfassung",
-  "Title": "Titel"
+  "Title": "Titel",
+  "To use our service, you need an account with us.": "Um unseren Dienst nutzen zu können, brauchst du ein Nutzerkonto."
 }
