Parse / dump story format

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -33,5 +33,6 @@
   "Storylab": "Erzählkreis",
   "Summary": "Zusammenfassung",
   "Title": "Titel",
-  "To use our service, you need an account with us.": "Um unseren Dienst nutzen zu können, brauchst du ein Nutzerkonto."
+  "To use our service, you need an account with us.": "Um unseren Dienst nutzen zu können, brauchst du ein Nutzerkonto.",
+  "We have sent you an email. It contains a link for you to login.": "Wir haben dir eine E-Mail geschickt. Sie enthält eine Link zum Anmelden."
 }
