--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -3,6 +3,7 @@
   "Author": "Autor",
   "Authors": "Autoren",
   "Changes to Circle saved": "Änderungen am Erzählkreis gespeichert",
+  "Click this link and you get access to your account.": "Klicke auf diesen Link und du erhältst Zugang zu deinem Nutzerkonto",
   "Circle": "Erzählkreis",
   "Circles": "Erzählkreise",
   "Edit": "Bearbeiten",
@@ -12,6 +13,7 @@
   "Here you can create such an account.": "Hier kannst du dir ein solches Konto anlegen.",
   "Home": "Start",
   ":app is private by default.": "Inhalte auf :app sind grundsätzlich nicht öffentlich.",
+  "Is this secure?": "Ist das sicher?",
   "Log out": "Abmelden",
   "Name": "Name",
   "New Author": "Neuer Autor",
@@ -20,7 +22,9 @@
   "New Scene": "Neue Szene",
   "New Story": "Neue Geschichte",
   "No Circles": "Keine Erzählkreise",
+  "On :app, all content is private by default.": "Im :app ist erst einmal alles privat.",
   "Passages": "Passagen",
+  "Please enter your email address to log into :app.": "Bitte gib deine E-Mail-Adresse zur Anmeldung im :app ein",
   "Please fill in all the fields.": "Bitte fülle alle Felder aus.",
   "Public": "Öffentlich",
   "Register": "Konto anlegen",
@@ -32,7 +36,15 @@
   "Stories": "Geschichten",
   "Storylab": "Erzählkreis",
   "Summary": "Zusammenfassung",
+  "This way, you don't have to remember a password.": "So brauchst du dir kein Kennwort zu merken",
+  "This way, nowbody has access to your :app account, without also having access to your email account.": "So hat niemand Zugang zu deinem :app-Konto, ohne nicht auch Zugang zu deiner E-Mail zu haben.",
   "Title": "Titel",
   "To use our service, you need an account with us.": "Um unseren Dienst nutzen zu können, brauchst du ein Nutzerkonto.",
-  "We have sent you an email. It contains a link for you to login.": "Wir haben dir eine E-Mail geschickt. Sie enthält eine Link zum Anmelden."
+  "To verify your identity, we need to send you an email with a link.": "Um deine Identität zu prüfen, schicken wir dir eine E-Mail mit einem Link.",
+  "Totally! To log into :app, you have to click on that link in the email we send you.": "Absolut! Um dich im :app anzumelden, musst du auf den Link in der E-Mail klicken, die wir dir geschickt haben.",
+  "We have sent you an email. It contains a link for you to login.": "Wir haben dir eine E-Mail geschickt. Sie enthält eine Link zum Anmelden.",
+  "We use email to log you into :app.": "Wir nutzen E-Mail, um dich im :app anzumelden.",
+  "Why do we have to send you an email?": "Warum müssen wir dir eine E-Mail schicken?",
+  "You are not allowed to access this story": "Auf diese Geschichte hast du keinen Zugriff",
+  "You stay logged in until you explicitly log out.": "Du bleibst angemeldet, bis du dich selber abmeldest."
 }
